 2014-08-11 14:02  dimitr 
   M src/jrd/RuntimeStatistics.h
Regression in 3.0: trace reports UPDATES in statistics when doing INSERT into <some_table>.

 2014-08-10 20:11  dimitr 
   M src/jrd/Attachment.cpp
   M src/jrd/Attachment.h
   M src/jrd/Monitoring.cpp
Better (methinks) synchronization for the monitoring stuff. Being field tested.

 2014-08-10 20:07  dimitr 
   M src/jrd/Database.cpp
   M src/jrd/Database.h
Front-ported Nickolay's improvement for the shared counter.

 2014-08-10 15:14  dimitr 
   M src/lock/print.cpp
Misc.

 2014-08-08 15:29  dimitr 
   M src/jrd/jrd.h
Atempted to fix a crash when the database monitoring is used concurrently under load.

 2014-08-08 15:27  dimitr 
   M src/jrd/vio.cpp
Fixed possible deadlocks between a worker thread and an attachment-level AST.

 2014-08-06 13:46  alexpeshkoff 
   M src/dsql/dsql.cpp
Restored a check dropped accidentially by one of my recent commits

 2014-08-06 08:55  hvlad 
   M src/jrd/vio.cpp
Missing notification of gc thread.

 2014-08-06 02:12  asfernandes 
   M doc/sql.extensions/README.ddl.txt
   M src/dsql/DdlNodes.epp
   M src/include/fb_types.h
   M src/isql/show.epp
   M src/jrd/TempSpace.cpp
   M src/jrd/pag.cpp
Misc.

 2014-08-05 16:00  hvlad 
   M src/jrd/pag.cpp
Fixed bug CORE-4510 : AV in validation is possible

 2014-08-05 08:46  dimitr 
   M src/include/gen/ids.h
   M src/jrd/Monitoring.cpp
   M src/jrd/RuntimeStatistics.cpp
   M src/jrd/RuntimeStatistics.h
   M src/jrd/inf.cpp
   M src/jrd/jrd.h
   M src/jrd/names.h
   M src/jrd/relations.h
   M src/jrd/vio.cpp
Refactored RuntimeStatistics internals. Added more record-level performance counters.

 2014-08-04 08:13  alexpeshkoff 
   M src/lock/print.cpp
comment

 2014-08-04 08:02  alexpeshkoff 
   M src/lock/print.cpp
Fixed Darwin port

 2014-08-01 16:22  asfernandes 
   M src/jrd/vio.cpp
Fixed the restore of packaged routines.

 2014-07-31 21:15  skidder 
   M src/jrd/Monitoring.cpp
   M src/jrd/Monitoring.h
   M src/jrd/TempSpace.cpp